--- a/LockWatch2Preferences/Resources/en.lproj/Advanced.strings
+++ b/LockWatch2Preferences/Resources/en.lproj/Advanced.strings
@@ -11,4 +11,10 @@
 	
 	"BACKGROUND_ENABLED" = "Show Background";
 	"BATTERY_CHARGING_VIEW_HIDDEN" = "Hide Battery Charging View";
+	
+	"COMPLICATION_CONTENT" = "🛠 Complication Content";
+	"COMPLICATION_CONTENT_NONE" = "None";
+	"COMPLICATION_CONTENT_DEFAULT" = "Default Templates";
+	"COMPLICATION_CONTENT_MIXED" = "Mixed (Default & Finished)";
+	"COMPLICATION_CONTENT_FINISHED" = "Finished Only";
 }
