--- a/LockWatch2Preferences/Resources/en.lproj/Advanced.strings
+++ b/LockWatch2Preferences/Resources/en.lproj/Advanced.strings
@@ -9,12 +9,16 @@
 {
 	"ADVANCED_SETTINGS" = "Advanced";
 	
+	"APPEARANCE" = "Appearance";
+	
 	"BACKGROUND_TYPE" = "Watch Face Background";
 	"BACKGROUND_TYPE_OFF" = "Off";
 	"BACKGROUND_TYPE_TRANSLUCENT" = "Translucent";
 	"BACKGROUND_TYPE_OPAQUE" = "Solid Black";
 	
 	"BATTERY_CHARGING_VIEW_HIDDEN" = "Hide Battery Charging View";
+	
+	"POSITIONING" = "Position";
 	
 	"COMPLICATION_CONTENT" = "🛠 Complication Content";
 	"COMPLICATION_CONTENT_NONE" = "None";
