--- a/LockWatch2Preferences/Resources/de.lproj/Advanced.strings
+++ b/LockWatch2Preferences/Resources/de.lproj/Advanced.strings
@@ -23,6 +23,6 @@
 	"COMPLICATION_CONTENT" = "🛠 Komplikations-Inhalt";
 	"COMPLICATION_CONTENT_NONE" = "Kein Inhalt";
 	"COMPLICATION_CONTENT_DEFAULT" = "Standard-Vorlagen";
-	"COMPLICATION_CONTENT_MIXED" = "Gemischt (Standard & Fertiggestellt)";
+	"COMPLICATION_CONTENT_MIXED" = "Gemischt (Vorlagen & Fertiggestellt)";
 	"COMPLICATION_CONTENT_FINISHED" = "Nur Fertiggestellte";
 }
